--- a/src/index.css
+++ b/src/index.css
@@ -126,8 +126,8 @@ body {
   .gauge {
     background: #e7e7e7;
     box-shadow: 0 -3px 6px 2px rgba(0, 0, 0, 0.5);
-    width: 130px;
-    height: 70px;
+    width: 10vw;
+    height: 6vw;
     border-radius: 100px 100px 0 0 !important;
     position: relative;
     overflow: hidden;
@@ -168,23 +168,22 @@ body {
   }
   
   .needle {
-    width: 55px;
-    height: 5px;
+    width: 75%; /* Adjust this to control how far the needle extends */
+    height: 0.26vw; /* Keep the height responsive */
     background: #cacccc;
     border-bottom-left-radius: 100% !important;
     border-bottom-right-radius: 5px !important;
     border-top-left-radius: 100% !important;
     border-top-right-radius: 5px !important;
     position: absolute;
-    bottom: -1px;
-    left: -15px;
-    transform-origin: 100% 2px;
-    transform: rotate(0deg);
-    box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.38);
-    display: none;
+    left: -20%; /* Center horizontally */
+    bottom: 0; /* Align to the bottom */
+    transform: translateX(-50%) rotate(0deg); /* Centering with translateX */
+    transform-origin: 100% 0.1vw; /* Ensure proper rotation point */
+    box-shadow: 0 0.05vw 0.05vw 0.05vw rgba(0, 0, 0, 0.38); /* Responsive shadow */
+    display: block; /* Ensure it's displayed */
     z-index: 9;
-  }
-  
+}
   .four.rischio1 .needle {
     animation: fourspeed1 2s 1 both;
     animation-delay: 1s;
@@ -242,21 +241,22 @@ body {
     bottom: 0;
     width: 0;
     height: 0;
-    border: 37.5px solid transparent;
+    border: 2.5vw solid transparent;
   }
   
   .four .slice-colors .st.slice-item:nth-child(2) {
-    border-top: 37.5px #FD9C2B solid;
-    border-right: 37.5px #FD9C2B solid;
+    border-top: 3.6vw #FD9C2B solid; /* 37.5px converted to vw */
+    border-right: 8vw #FD9C2B solid;
     background-color: #EB5757;
-  }
-  
-  .four .slice-colors .st.slice-item:nth-child(4) {
-    left: 50%;
-    border-bottom: 37.5px #57EB66 solid;
-    border-right: 37.5px #57EB66 solid;
+}
+
+.four .slice-colors .st.slice-item:nth-child(4) {
+    left: 50%; /* This percentage is already responsive, no need to change */
+    border-bottom: 2.5vw #57EB66 solid; /* 37.5px converted to vw */
+    border-right: 3.2vw #57EB66 solid;
     background-color: #FD9C2B;
-  }
+}
+
   
   .color-label {
     position: absolute;
@@ -271,7 +271,7 @@ body {
     left: 12%;
     transform: translate(-50%, -50%);
     color: black;
-    font-size: x-small;
+    font-size: 1.3vh;
     font-weight: 600;
   }
   
@@ -280,7 +280,7 @@ body {
     right: 12%;
     transform: translate(50%, -50%);
     color: black;
-    font-size: x-small;
+    font-size: 1.3vh;
     font-weight: 600;
   }
   
@@ -289,7 +289,7 @@ body {
     left: 49%;
     transform: translate(-50%, 50%);
     color: black;
-    font-size: x-small;
+    font-size: 1.3vh;
     font-weight: 600;
   }
   
